keep_md: lecture 9

--- a/Lecture9/rmarkdownlecture9.Rmd
+++ b/Lecture9/rmarkdownlecture9.Rmd
@@ -3,6 +3,7 @@ title: "Lecture_9_markdown"
 author: "Cody Ocheltree"
 date: "5/2/2018"
 output: html_document
+keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
