i am entering a commit message now as the computer requires it to continue in my quest for knowledge

--- a/lecture13/lecture13project.Rmd
+++ b/lecture13/lecture13project.Rmd
@@ -55,6 +55,7 @@ boxplot(GG, AG, AA, names = c("G/G", "A/G", "A/A"), notch = T)
 ```
 
 ```{r}
-boxplot()
+library(ggplot2)
+ggplot(seq_results)
 ```
 
