--- a/Lecture15/l15markdown.Rmd
+++ b/Lecture15/l15markdown.Rmd
@@ -176,3 +176,11 @@ gobpres = gage(foldchanges, gsets=gobpsets, same.dir=TRUE)
 lapply(gobpres, head)
 ```
 
+```{r}
+head(dds$condition)
+```
+
+```{r}
+head(colData["condition"])
+```
+
